# josh_project2

./: .deployment  .gitignore  README.md  local.settings.json
.github/workflows/: main_joshproject2frontend.yml
NeighborlyAPI/: pyproject.toml  requirements.txt
NeighborlyAPI/createAdvertisement/: __init__.py
NeighborlyAPI/deleteAdvertisement/: __init__.py
NeighborlyAPI/eventHubTrigger/: __init__.py  function.json
NeighborlyAPI/getAdvertisement/: __init__.py
NeighborlyAPI/getAdvertisements/: __init__.py
NeighborlyAPI/getPost/: __init__.py
NeighborlyAPI/getPosts/: __init__.py
NeighborlyAPI/updateAdvertisement/: __init__.py
NeighborlyFrontEnd/: settings.py
sample_data/: upload.py
